<resources>
    <string name="app_name">hangman</string>

    <string name="play">Oyna</string>
    <string name="adam_asmaca">ADAM ASMACA</string>
    <string name="btn_q_label">Q</string>
    <string name="btn_p_label">P</string>
    <string name="btn_a_label">A</string>
    <string name="btn_v_label">V</string>
    <string name="btn_z_label">Z</string>
    <string name="btn_s_label">S</string>
    <string name="btn_t_label">T</string>
    <string name="btn_r_label">R</string>
    <string name="btn_u_label">U</string>
    <string name="btn_o_label">O</string>
    <string name="btn_n_label">N</string>
    <string name="btn_m_label">M</string>
    <string name="btn_w_label">W</string>
    <string name="btn_l_label">L</string>
    <string name="btn_i_label">I</string>
    <string name="btn_g_label">G</string>
    <string name="btn_h_label">H</string>
    <string name="btn_j_label">J</string>
    <string name="btn_e_label">E</string>
    <string name="btn_f_label">F</string>
    <string name="btn_d_label">D</string>
    <string name="btn_b_label">B</string>
    <string name="btn_c_label">C</string>
    <string name="btn_k_label">K</string>
    <string name="btn_x_label">X</string>
    <string name="btn_y_label">Y</string>
    <string name="todo">TODO</string>
    <string name="secret_word_label_tmp">●●●●●●</string>

    <string-array name="words">
        <item>CHARGER</item>
        <item>COMPUTER</item>
        <item>TABLET</item>
        <item>SYSTEM</item>
        <item>APPLICATION</item>
        <item>INTERNET</item>
        <item>STYLUS</item>
        <item>ANDROID</item>
        <item>KEYBOARD</item>
        <item>SMARTPHONE</item>
        <item>TRAKYA</item>
    </string-array>

</resources>
