<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="#0088ff">

    <ImageView
        android:id="@+id/game_image"
        android:layout_width="241dp"
        android:layout_height="223dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wrong_0" />

    <TextView
        android:id="@+id/tv_hiddenWord"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="224dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/secret_word_label_tmp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hiddenWord"
        app:layout_constraintVertical_bias="1.0">

    </TableLayout>

    <Button
        android:id="@+id/btn_a"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="btnClick"
        android:text="@string/btn_a_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/btn_q"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_q_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_p"
        app:layout_constraintStart_toEndOf="@+id/btn_p" />

    <Button
        android:id="@+id/btn_s"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_s_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_r"
        app:layout_constraintStart_toEndOf="@+id/btn_r" />

    <Button
        android:id="@+id/btn_t"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_t_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_s"
        app:layout_constraintStart_toEndOf="@+id/btn_s" />

    <Button
        android:id="@+id/btn_u"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_u_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_t"
        app:layout_constraintStart_toEndOf="@+id/btn_t" />

    <Button
        android:id="@+id/btn_r"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_r_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_q"
        app:layout_constraintStart_toEndOf="@+id/btn_q" />

    <Button
        android:id="@+id/btn_h"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_h_label"
        app:layout_constraintStart_toStartOf="@+id/btn_a"
        app:layout_constraintTop_toBottomOf="@+id/btn_a" />

    <Button
        android:id="@+id/btn_i"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_i_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_h"
        app:layout_constraintStart_toEndOf="@+id/btn_h" />

    <Button
        android:id="@+id/btn_j"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_j_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_i"
        app:layout_constraintStart_toEndOf="@+id/btn_i" />

    <Button
        android:id="@+id/btn_k"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_k_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_j"
        app:layout_constraintStart_toEndOf="@+id/btn_j" />

    <Button
        android:id="@+id/btn_p"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_p_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_o"
        app:layout_constraintStart_toEndOf="@+id/btn_o" />

    <Button
        android:id="@+id/btn_l"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_l_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_k"
        app:layout_constraintStart_toEndOf="@+id/btn_k" />

    <Button
        android:id="@+id/btn_m"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_m_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_l"
        app:layout_constraintStart_toEndOf="@+id/btn_l" />

    <Button
        android:id="@+id/btn_n"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_n_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_m"
        app:layout_constraintStart_toEndOf="@+id/btn_m" />

    <Button
        android:id="@+id/btn_o"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_o_label"
        app:layout_constraintStart_toStartOf="@+id/btn_h"
        app:layout_constraintTop_toBottomOf="@+id/btn_h" />

    <Button
        android:id="@+id/btn_v"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_v_label"
        app:layout_constraintStart_toStartOf="@+id/btn_o"
        app:layout_constraintTop_toBottomOf="@+id/btn_p" />

    <Button
        android:id="@+id/btn_w"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_w_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_v"
        app:layout_constraintStart_toEndOf="@+id/btn_v" />

    <Button
        android:id="@+id/btn_x"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_x_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_w"
        app:layout_constraintStart_toEndOf="@+id/btn_w" />

    <Button
        android:id="@+id/btn_y"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_y_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_x"
        app:layout_constraintStart_toEndOf="@+id/btn_x" />

    <Button
        android:id="@+id/btn_z"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_z_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_y"
        app:layout_constraintStart_toEndOf="@+id/btn_y" />

    <Button
        android:id="@+id/btn_b"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_b_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_a"
        app:layout_constraintStart_toEndOf="@+id/btn_a" />

    <Button
        android:id="@+id/btn_c"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_c_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_b"
        app:layout_constraintStart_toEndOf="@+id/btn_b" />

    <Button
        android:id="@+id/btn_d"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_d_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_c"
        app:layout_constraintStart_toEndOf="@+id/btn_c" />

    <Button
        android:id="@+id/btn_e"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_e_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_d"
        app:layout_constraintStart_toEndOf="@+id/btn_d" />

    <Button
        android:id="@+id/btn_f"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_f_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_e"
        app:layout_constraintStart_toEndOf="@+id/btn_e" />

    <Button
        android:id="@+id/btn_g"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:onClick="btnClick"
        android:text="@string/btn_g_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_f"
        app:layout_constraintStart_toEndOf="@+id/btn_f" />

</android.support.constraint.ConstraintLayout>